get user, get loan API
