# pkg/model/response/user.go
@@ -1,0 +1,6 @@
+package response
+
+type GetUser struct {
+	Email string `json:"email"`
+	Role  string `json:"role"`
+}
